gitops/apps/mlops/account-controller/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: account-service
  namespace: apps
spec:
  hosts:
  - "*"
  gateways:
  - default/mlops
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: account-service.apps.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /swagger
    rewrite:
      uri: /
    route:
      - destination:
          host: account-service.apps.svc.cluster.local
          port:
            number: 80
