gitops/apps/mlops/account-controller/authentication.yaml
---
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: account-service
  namespace: apps
spec:
  selector:
    matchLabels:
      app: account-service
  jwtRules:
  - issuer: "https://mlops.adimen.tech/realms/mlops"
    jwksUri: "https://mlops.adimen.tech/realms/mlops/protocol/openid-connect/certs"
    forwardOriginalToken: true
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: account-service
  namespace: apps
spec:
  selector:
    matchLabels:
      app: account-service
  action: CUSTOM
  provider:
    # Extension provider configured when we installed Istio
    name: oauth2-proxy
  rules:
  - {}
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: account-service
  namespace: apps
spec:
  selector:
    matchLabels:
      app: account-service
  action: ALLOW
  rules:
    - when:
        - key: request.auth.claims[iss]
          values: [ "https://mlops.adimen.tech/realms/mlops" ]
#---
#apiVersion: networking.istio.io/v1alpha3
#kind: DestinationRule
#metadata:
#  name: account-service
#  namespace: apps
#spec:
#  host: account-service.apps.svc.cluster.local
#  trafficPolicy:
#    tls:
#      mode: SIMPLE
